:bug: Fix overflow of dropdown

--- a/src/components/ui/atoms/Dropdown/dropdown.scss
+++ b/src/components/ui/atoms/Dropdown/dropdown.scss
@@ -11,7 +11,6 @@
         top: 100%;
         left: 50%;
         transform: translateX(-50%);
-        padding: 20px;
         height: 100%;
         width: auto;
         background-color: var(--base-color-neutral-inverted);
@@ -19,11 +18,17 @@
         justify-content: center;
         align-items: center;
         gap: 10px;
+        height: 0;
+        padding: 0;
+        overflow: hidden;
+        transform: padding .1 linear, height .1 linear, opacity .4 linear;
     }
 
     &:hover {
         .dropdown__child {
             opacity: 1;
+            height: auto;
+            padding: 20px;
         }
     }
 }
